# tree-sitter-groq

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  install-nvim.sh  nvim-setup.lua  package-lock.json  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_groq/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterGroqTests/: TreeSitterGroqTests.swift
doc/: tags  tree-sitter-groq.txt
docs/: 2.grammar-dsl.md
editors/: nvim-injections.scm
lua/tree-sitter-groq/: health.lua  init.lua
plugin/: tree-sitter-groq.lua
queries/: injections.scm
queries/groq/: highlights.scm
reference-grammars/: README.md  groq.js.json
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  functions.txt  literals.txt  operators.txt  projections.txt  queries.txt
