[package]
name = "tree-sitter-groq"
description = "Parser for the Groq query language used by the Sanity.io headless CMS"
version = "0.1.0"
authors = ["Kurt Steigleder"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "groq"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-groq"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
